# ChangeLog for app-admin/collectd
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/collectd/ChangeLog,v 1.39 2012/05/25 21:26:29 dilfridge Exp $

  25 May 2012; Andreas K. Huettel <dilfridge@gentoo.org> collectd-5.1.0.ebuild,
  metadata.xml:
  Enable threshold and v5upgrade plugins

  24 May 2012; Mike Frysinger <vapier@gentoo.org> collectd-5.1.0-r1.ebuild,
  collectd-5.1.0.ebuild:
  Inherit user for enewuser/etc...

*collectd-5.1.0-r1 (07 May 2012)

  07 May 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -files/collectd-5.0.0-varnish.patch, -files/collectd-5.0.0-yajl2-2.patch,
  -files/collectd-5.0.0-yajl2.patch, -files/collectd-5.0.1-varnish.patch,
  -collectd-5.0.2-r1.ebuild, -files/collectd-5.0.2-irq.patch,
  -files/collectd-5.0.2-message.patch, collectd-5.1.0.ebuild,
  +collectd-5.1.0-r1.ebuild, +files/collectd-5.1.0-netlink.patch:
  Fix compilation with newest iproute2 / libnetlink, bug 413993

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> collectd-5.0.2-r1.ebuild,
  collectd-5.1.0.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*collectd-5.1.0 (08 Apr 2012)

  08 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +collectd-5.1.0.ebuild, metadata.xml:
  Version bump

  01 Apr 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -collectd-5.0.2.ebuild, collectd-5.0.2-r1.ebuild:
  Require at least iptables-1.4.13, fixes bug 375733. Drop old.

  12 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  -collectd-5.0.0-r2.ebuild, -collectd-5.0.1.ebuild:
  Remove old

*collectd-5.0.2-r1 (12 Feb 2012)

  12 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +collectd-5.0.2-r1.ebuild, +files/collectd-5.0.2-message.patch:
  Increase message buffer size for memcached, bug 402569

*collectd-5.0.2 (07 Feb 2012)

  07 Feb 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  +collectd-5.0.2.ebuild, +files/collectd-5.0.2-irq.patch,
  files/collectd.initd:
  Version bump, thanks Johan
