@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA1
 
 AUX collectd-4.10.1-libiptc.patch 534 RMD160 dd6c016797ec4e6e5c7c67bbbeddd50d1c59badc SHA1 253efd36642f7ab1253bcc307e0f4d0e1a4d8e21 SHA256 f6c63e0cb686e4d7a655b9ff0b69e8ba75a9cf40c2ae79c6ec97c1e7377d2f4e
 AUX collectd-4.10.1-libperl.patch 917 RMD160 2feb20abbf7fd036e34957c190689f1e668ff321 SHA1 1c8312b576faa6a855f4f615995b007b108325ba SHA256 26e3c74392166a2438d7106e94953f871aedfe3b643c866afc8865c1ef7534c7
@@ -14,24 +14,14 @@ AUX collectd.confd 865 RMD160 edf4e29bc193128d913443ba5251935726b13194 SHA1 0987
 AUX collectd.initd 1649 RMD160 69e2d339e328b7e7806c49c0226e6e2ffcd40675 SHA1 e83e80f0a56ed8153861aaa1ced5f81256e6d93b SHA256 9db6809d7e7991208d35bc517c71d12a5fa8b8453f096a433e386259c7301163
 AUX logrotate 115 RMD160 bc70b0fbacde2021a96851f781e096597b161f8c SHA1 4c9f65faab5a43b142fe7f34163ca6d07b8ed704 SHA256 eb359631805b6bfb9f2a9ae5ed21be8f8b3b6f1ffeed8d506231043c9a77262c
 DIST collectd-5.1.0.tar.bz2 1305538 RMD160 31d211b14086edbcbd8c8c9081ec07201310c62d SHA1 77545833b77a03ec02219bfb925e6a1f3463ddef SHA256 521d4be7df5bc1124b7b9ea88227e95839a5f7c1b704a5bde0f60f058ec6eecb
-EBUILD collectd-5.1.0-r1.ebuild 13029 RMD160 b2090e9326064b6e8217aaf47115e7f92b3b1318 SHA1 cbf3b2bce862e5fcc5631879181d32c19c6440e3 SHA256 ce21beadc55a025c0e85f736a9f403a2fa6183acfc6f56a9bd2b7b8cd9ab0691
-EBUILD collectd-5.1.0.ebuild 13014 RMD160 f05cf7dde3fa6de4f4f0e315e6fea943e7c29591 SHA1 9757a1afa65304f9472e0e64e25d225f1a191cb9 SHA256 bf45ba8ec67230c499509829f2616be162ddaec8089bedee3c5b469ec8741bc4
-MISC ChangeLog 8291 RMD160 1f0ff15ea967e8be85a199cae3c4c0736b17740c SHA1 639c6272a35ca34439b1f05592539e2befee6d76 SHA256 3ded3448f4302435581d2eb34420c2918b1100f4daa629f67ac9653dfa318c03
+EBUILD collectd-5.1.0-r1.ebuild 13039 RMD160 ae10b1597c59a75497e6e168e498b8ba7dff109c SHA1 59753602d4f31a2dd9689052a54833292f5bc501 SHA256 79521d9f28c13621de895bd9c4dd9c0f9011d132c50c0333caefd69dfd1dda58
+EBUILD collectd-5.1.0.ebuild 13021 RMD160 095a85a7f357bfff9a023caaeda1a4157dcc2d7d SHA1 65b0676e5a3f7e01d7fe7674e942b8e29d1f786e SHA256 ebf3f6c1cf9d6c17d7255d751a8c91934ef689196711213265c595ec15288d0d
+MISC ChangeLog 8422 RMD160 0cc87b2b645f0c5f5475d609c69dc490627420cf SHA1 e60754a7e39fdd4322e6d3d217f4f897742a0436 SHA256 38a89559ea9c722832ece886ec9102752de02fde9725173b76acf3b145b6bda8
 MISC metadata.xml 12746 RMD160 f65246752a7be2727c424dd90fc0ce854390fe27 SHA1 2e77bd70548a9d85deed9181b9e2480f1195ad70 SHA256 60df947efd892fcf4b7fc4b15c3681b456edc1bb735be51560788b6bf3705c1a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJPv/lMAAoJENwGBM22xffetQEQAJMSsYksN3fC2jfRal7mt1y7
-gXcWTf74zyfNdvh2jzZy4HKEQ+lQL2fSE6ckCxgjzR1Vx453rgVrF/57qhqnKA2l
-Q6o9qHeQ6oMNql1k9Y/Nrw+uJjMKJBZE+8MwwZ+kjdxhWQ9OQQnyPIXRjxvM4Gv6
-7CJIrEOfaRKZBFzH3p4QWRApJuxk9/3YW05y45lh6XaoQRexAxzJ761Ddc/lAY1M
-jTsSsfQxIdZHExsYm+UWKLX6uFQcs8XbEU2G9lCMsMPSq/FPr3VD5i1Hz3thD6o9
-xKeoBekJ1LOwrvYRE0CTHezlMEeKMlHxvQQhlKh+K3Su2jz4GCMqKujoVMhJH/r9
-MqdWxcl3RdZUsLoqu7PVp/XKnte7hMfNEvA7EiJYvhkVpGxPo73YftvTdlBPVonr
-pR1QEZC7SY4hRoMi3XEVIqBHMryWh1z+K5CfTE5lpz1JhLUTgvp+Ce8GYnrpRpfL
-KC2/Td/qWIp4FBlD/30IjVJXu55iRdYzcfyMH/rhhSaxSaNc8rV6jPNuYPF2QoBb
-uetKU3BMHf+EL0KB7OaLxUjmqT3ppnlVMmEyyYW6UuaYJgamc4gKnY1rljCEDOcG
-Fwjj/6fmGQUVbxSFQ6qZuTqGrbw19XpXrRZ9v+58GUENvujRip8K3a6tFpqGC5Xo
-kVfGVE+ciRhEZhYMKvck
-=Xfoe
+iEYEARECAAYFAk/G1xAACgkQ/ejvha5XGaOHgQCdFpZNJoo+4T8L6vpFjIVG6QSF
+XXMAnjbY7IoC9LhCRUAI1OcNMbOitgCR
+=Ne+X
 -----END PGP SIGNATURE-----
