@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/webkit-gtk
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.165 2012/05/29 23:19:26 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.166 2012/05/30 22:40:06 aballier Exp $
+
+  30 May 2012; Alexis Ballier <aballier@gentoo.org>
+  webkit-gtk-1.8.1-r201.ebuild:
+  keyword ~amd64-fbsd
 
   29 May 2012; Alexis Ballier <aballier@gentoo.org>
   webkit-gtk-1.8.1-r301.ebuild:
